--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".TrainingDescription"
-            android:label="Training Description" />
+            android:label="Training Description"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".ExerciseChoosing"
             android:label="Choose exercises"
